--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
     </header>
 <section class="SecA">
     <div class="SecA1">
-        <div class=""><img src="images/max-van-den-oetelaar-IBpP3C9SAp8-unsplash.jpg" alt=""></div>
+        <div class=""><img src="images/max-van-den-oetelaar-IBpP3C9SAp8-unsplash.jpg" alt="Main Image of Kayak in the ASDF Valley."></div>
     </div>
     <div class="SecA2">
-        <div class=""><h2>Robert J. Garcia</h2></div>
+        <div><h2>Robert J. Garcia</h2></div>
         <nav>
-            <div class=""><a class="projectsBtnB" href="projects.html">My Projects</a></div>
+            <div><a class="projectsBtnB" href="projects.html">My Projects</a></div>
         </nav>
-        <div class="">Bilge fire in the hole parley Davy Jones' Locker Admiral of the Black measured fer yer chains flogging skysail spyglass belay. Clap of thunder Letter of Marque league gun warp boom spyglass keel take a caulk log. Fluke jolly boat American Main no prey, no pay barque poop deck Nelsons folly lad coxswain rutters.</div>
+        <div>Bilge fire in the hole parley Davy Jones' Locker Admiral of the Black measured fer yer chains flogging skysail spyglass belay. Clap of thunder Letter of Marque league gun warp boom spyglass keel take a caulk log. Fluke jolly boat American Main no prey, no pay barque poop deck Nelsons folly lad coxswain rutters.</div>
     </div>
 </section>
 <section class="SecB">
-    <div class="imgNormalize"><img src="images/carl-heyerdahl-V1BxFWI84-k-unsplash.jpg" alt="KayakingView"><br>Kayak Horizon</div>
-    <div class="imgNormalize"><img src="images/mikail-mcverry-Aw45CDU2evI-unsplash.jpg" alt="KayakingView"><br>Kayak Horizon</div>
-    <div class="imgNormalize"><img src="images/joshua-ness-O__SJjXTEFg-unsplash.jpg" alt="KayakingView"><br>Horizon o' Kayak</div>
-    <div class="imgNormalize"><img src="images/isaac-liljeholm-xs3QmPF6u8U-unsplash.jpg" alt="KayakingView"><br>Kayak Horizon</div>
-    <div class="imgNormalize"><img src="images/carl-heyerdahl-V1BxFWI84-k-unsplash.jpg" alt="KayakingView"><br>Horizon o' Kayak</div>
-    <div class="imgNormalize"><img src="images/joshua-ness-O__SJjXTEFg-unsplash.jpg" alt="KayakingView"><br>Kayak Horizon</div>
-    <div class="imgNormalize"><img src="images/mikail-mcverry-Aw45CDU2evI-unsplash.jpg" alt="KayakingView"><br>Kayak Horizon</div>
-    <div class="imgNormalize"><img src="images/isaac-liljeholm-xs3QmPF6u8U-unsplash.jpg" alt="KayakingView"><br>Horizon o' Kayak</div>
+    <div class="imgNormalize"><img src="images/carl-heyerdahl-V1BxFWI84-k-unsplash.jpg" alt="Kayaking View at Lake ASDF."><br>Kayak Horizon</div>
+    <div class="imgNormalize"><img src="images/mikail-mcverry-Aw45CDU2evI-unsplash.jpg" alt="Kayaking View at ASDF Peninsula."><br>Kayak Horizon</div>
+    <div class="imgNormalize"><img src="images/joshua-ness-O__SJjXTEFg-unsplash.jpg" alt="Kayaking View at Lake FDSA."><br>Horizon o' Kayak</div>
+    <div class="imgNormalize"><img src="images/isaac-liljeholm-xs3QmPF6u8U-unsplash.jpg" alt="Kayaking View in the DSAF Sound."><br>Kayak Horizon</div>
+    <div class="imgNormalize"><img src="images/carl-heyerdahl-V1BxFWI84-k-unsplash.jpg" alt="Kayaking View at Lake RFCD."><br>Horizon o' Kayak</div>
+    <div class="imgNormalize"><img src="images/joshua-ness-O__SJjXTEFg-unsplash.jpg" alt="Kayaking View in the FGRE Inlet."><br>Kayak Horizon</div>
+    <div class="imgNormalize"><img src="images/mikail-mcverry-Aw45CDU2evI-unsplash.jpg" alt="Kayaking View at the UYTR Coast."><br>Kayak Horizon</div>
+    <div class="imgNormalize"><img src="images/isaac-liljeholm-xs3QmPF6u8U-unsplash.jpg" alt="Kayaking View at Lake OIUY."><br>Horizon o' Kayak</div>
 </section>
 <footer>
         <div><img src="" alt="">Loaded to the gunwalls Yellow Jack spike chase mutiny Cat o'nine tails hempen <a class="contactBtnB" href="https://www.linkedin.com/in/robert-garcia-4b650675/">Linked In! Yar!</a> halter brig to go on account aft. Shiver me timbers square-rigged Jack Tar reef sails Arr starboard ye Nelsons folly scurvy.</div>
