7th Commit - Extra Polish.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="imgNormalize"><img src="images/isaac-liljeholm-xs3QmPF6u8U-unsplash.jpg" alt="Kayaking View at Lake OIUY."><br>Horizon o' Kayak</div>
 </section>
 <footer>
-        <div><img src="" alt="">Loaded to the gunwalls Yellow Jack spike chase mutiny Cat o'nine tails hempen <a class="contactBtnB" href="https://www.linkedin.com/in/robert-garcia-4b650675/">Linked In! Yar!</a> halter brig to go on account aft. Shiver me timbers square-rigged Jack Tar reef sails Arr starboard ye Nelsons folly scurvy.</div>
+        <div><img src="" alt="">Loaded to the gunwalls Yellow Jack spike chase mutiny Cat o'nine tails hempen <a class="contactBtnB" href="https://www.linkedin.com/in/robert-garcia-4b650675/">Linked In! Yar!</a> halter brig to go on account aft.</div>
         <nav>
         <div><a class="contactBtnB" href="contact.html">Contact Me</a></div>
         </nav>
